// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen actionCodes config import-export] should do nothing when the actionCodes already exist: the actionCodes already exist and have not been imported 1`] = `
Object {
  "stderr": "",
  "stdout": "= actioncode => name: 'cfgObjectTest', type: 'transfer', tenant: 'Environment'
Completed. 0 object(s) imported.
",
}
`;

exports[`[mutagen actionCodes config import-export] should import the actionCodes: the actionCodes have been imported 1`] = `
Object {
  "stderr": "",
  "stdout": "+ actioncode => name: 'cfgObjectTest', type: 'transfer', tenant: 'Environment'
Completed. 1 object(s) imported.
",
}
`;
